--- a/etc/main.conf
+++ b/etc/main.conf
@@ -23,15 +23,13 @@ doc_type = aggregated
 aggregate_by = 600
 optimize_indices = true
 
-[listener.line]
+[listener.m2]
 enabled = true
 port = 8001
 
 [listener.graphite]
 enabled = true
 port = 8002
-
-[listener.graphite]
 
 [scrubber]
 threads = 4
