--- a/etc/main.conf
+++ b/etc/main.conf
@@ -23,13 +23,15 @@ doc_type = aggregated
 aggregate_by = 600
 optimize_indices = true
 
-[listener.m2]
+[listener.1]
 enabled = true
 port = 8001
+protocol = metrics20
 
-[listener.graphite]
+[listener.2]
 enabled = true
 port = 8002
+protocol = graphite
 
 [scrubber]
 threads = 4
