--- a/etc/main.conf
+++ b/etc/main.conf
@@ -1,38 +1,53 @@
+#
+# METRICS CAPACITOR MAIN CONFIGURATION FILE
+# (TOML syntax)
+#
+
+# Enable logging to Syslog
+#
 syslog = false
+
+# Enable debug logging
+#
 debug = false
 
+# REDIS BUFFER CONFIG
+#
+# Buffer must be configured and accessibe for any of the modes.
+#
 [redis]
-url = redis://127.0.0.1:6379/0
+socket = "tcp"
+address = "127.0.0.1:6379"
+db = 0
 timeout = 5
+connections = 100
+queue = "test"
 
-[elasticsearch]
-urls = [ http://localhost:9200/ ]
-timeout = 10
-connections = 2
-index = metrics
+# LISTENERS CONFIG
+#
+# A listener is defined by stating [listener.{name}] section.
+# {name} can be any of [a-zA-Z0-9_]. Protocol can be one of
+# metrics20, graphite (http is in the works ;)). If you want
+# to disable the listener simply leave out the configuration.
+#
+[listener.m2]
+port = 8001
+protocol = "metrics20"
 
+[listener.graphite]
+port = 8002
+protocol = "graphite"
+
+# WRITER CONFIG
+#
+# Writer takes
+#
 [writer]
-threads = 4
-doc_type = actual
+urls = [ "http://127.0.0.1:9200/" ]
+timeout = 10
+concurrency = 5
 bulk_max = 5000
 bulk_wait = 10
-ttl = 1w
-
-[aggregator]
-doc_type = aggregated
-aggregate_by = 600
-optimize_indices = true
-
-[listener.1]
-enabled = true
-port = 8001
-protocol = metrics20
-
-[listener.2]
-enabled = true
-port = 8002
-protocol = graphite
-
-[scrubber]
-threads = 4
-#tags =
+index = "metrics"
+doc_type = "actual"
+ttl = 1
