--- a/etc/main.conf
+++ b/etc/main.conf
@@ -13,36 +13,45 @@ debug = false
 
 # REDIS BUFFER CONFIG
 #
+[buffer]
+#
 # Buffer must be configured and accessibe for any of the modes.
 #
-[redis]
 socket = "tcp"
 address = "127.0.0.1:6379"
 db = 0
 timeout = 5
+wait = 1
 connections = 100
 queue = "test"
 
 # LISTENERS CONFIG
 #
+[listener]
+#
 # A listener is defined by stating [listener.{name}] section.
 # {name} can be any of [a-zA-Z0-9_]. Protocol can be one of
-# metrics20, graphite (http is in the works ;)). If you want
+# influx, graphite (http is in the works ;)). If you want
 # to disable the listener simply leave out the configuration.
 #
-[listener.m2]
+[listener.influx]
 port = 8001
-protocol = "metrics20"
+protocol = "tcp"
+data = "influx"
 
 [listener.graphite]
 port = 8002
-protocol = "graphite"
+protocol = "tcp"
+data = "graphite"
+
+[listener.http]
 
 # WRITER CONFIG
 #
-# Writer takes
-#
 [writer]
+#
+# Writer takes TODO
+#
 urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
 concurrency = 5
