--- a/etc/main.conf
+++ b/etc/main.conf
@@ -37,14 +37,12 @@ queue = "test"
 [listener.influx]
 port = 8001
 protocol = "tcp"
-data = "influx"
+codec = "influx"
 
 [listener.graphite]
 port = 8002
 protocol = "tcp"
-data = "graphite"
-
-[listener.http]
+codec = "graphite"
 
 # WRITER CONFIG
 #
