--- a/etc/main.conf
+++ b/etc/main.conf
@@ -21,7 +21,7 @@ socket = "tcp"
 address = "127.0.0.1:6379"
 db = 0
 timeout = 5
-wait = 1
+wait = 0
 connections = 100
 queue = "test"
 
@@ -56,5 +56,5 @@ concurrency = 5
 bulk_max = 5000
 bulk_wait = 10
 index = "metrics"
-doc_type = "actual"
+doc_type = "raw"
 ttl = 1
