--- a/etc/main.conf
+++ b/etc/main.conf
@@ -15,7 +15,7 @@ debug = false
 #
 [buffer]
 #
-# Buffer must be configured and accessibe for any of the modes.
+# Buffer must be configured and accessible for any of the modes.
 #
 socket = "tcp"
 address = "127.0.0.1:6379"
@@ -48,7 +48,7 @@ codec = "graphite"
 #
 [writer]
 #
-# Writer takes TODO
+# Writer processes the metrics for indexing
 #
 urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
