--- a/etc/main.conf
+++ b/etc/main.conf
@@ -43,6 +43,7 @@ codec = "influx"
 port = 8002
 protocol = "tcp"
 codec = "graphite"
+mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 
 # WRITER CONFIG
 #
