--- a/etc/main.conf
+++ b/etc/main.conf
@@ -18,7 +18,7 @@ debug = true
 # Buffer must be configured and accessible for any of the modes.
 #
 socket = "tcp"
-address = "127.0.0.1:6379"
+address = "redis:6379"
 db = 0
 timeout = 5
 wait = 0
@@ -51,7 +51,7 @@ mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 #
 # Writer processes the metrics for indexing
 #
-urls = [ "http://127.0.0.1:9200/" ]
+urls = [ "http://es:9200/" ]
 timeout = 10
 concurrency = 5
 bulk_max = 5000
