--- a/etc/main.conf
+++ b/etc/main.conf
@@ -30,10 +30,11 @@ queue = "test"
 [listener]
 #
 # A listener is defined by stating [listener.{name}] section.
-# {name} can be any of [a-zA-Z0-9_]. Protocol can be one of
-# influx, graphite (http is in the works ;)). If you want
+# {name} can be any of [a-zA-Z0-9_]. Codec can be one of
+# influx, graphite (json is in the works ;)). If you want
 # to disable the listener simply leave out the configuration.
-#
+# Protocol can be only "tcp" at this moment
+
 [listener.influx]
 port = 8001
 protocol = "tcp"
