--- a/etc/main.conf
+++ b/etc/main.conf
@@ -9,7 +9,7 @@ syslog = false
 
 # Enable debug logging
 #
-debug = false
+debug = true
 
 # REDIS BUFFER CONFIG
 #
@@ -18,7 +18,7 @@ debug = false
 # Buffer must be configured and accessible for any of the modes.
 #
 socket = "tcp"
-address = "redis:6379"
+address = "172.18.0.1:6379"
 db = 0
 timeout = 5
 wait = 0
@@ -52,7 +52,7 @@ mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 #
 # Writer processes the metrics for indexing
 #
-urls = [ "http://es:9200/" ]
+urls = [ "http://172.18.0.1:9200/" ]
 timeout = 10
 concurrency = 5
 bulk_max = 5000
