--- a/etc/main.conf
+++ b/etc/main.conf
@@ -1,62 +1,95 @@
 #
-# METRICS CAPACITOR MAIN CONFIGURATION FILE
+# == METRICS CAPACITOR MAIN CONFIGURATION FILE ===
 # (TOML syntax)
 #
 
 # Enable logging to Syslog
-#
 syslog = false
 
-# Enable debug logging
-#
-debug = true
+# [debug] enables debug logging
+# can be also controlled from system by signals:
+# - SIGUSR1: enable debug
+# - SIGUSR2: disable debug
+debug = false
 
-# REDIS BUFFER CONFIG
+# == TRANSPORT ==
 #
-[buffer]
-#
-# Buffer must be configured and accessible for any of the modes.
-#
-socket = "tcp"
-address = "172.18.0.1:6379"
-db = 0
-timeout = 5
-wait = 0
-connections = 100
-queue = "test"
+# The glue between listeners and writer
+[transport]
+# [type] can be either of
+# - channel: in-memory go channel; only for single-host deployment
+# - redis: for single- and multi-host deployment
+# - amqp: with RabbitMQ cluster for multi-host HA deployment
+type = "channel"
 
-# LISTENERS CONFIG
+# [buffer_size] specifies transport channel capacity of metrics
+buffer_size = 50000
+
+# == Redis Transport options ==
 #
-[listener]
+# [redis_url] can be local or remote socket. Example:
+# - "unix:///var/tmp/redis.sock|0"
+# - "tcp://192.168.1.1:6379|15"
+#redis_url = "tcp://localhost:6379|0"
+#
+# Redis request timeout can be controlled by [redis_timeout]
+#redis_timeout = 5
+#
+# [redis_wait] specifies how long should we wait for Metric retrieval from Redis
+#redis_wait = 1
+#
+# Redis connection pool capacity is specified by [redis_connections]
+#redis_connections = 100
+#
+# Name of the queue in Redis
+#redis_queue = "default"
+#
+
+# == AMQP Transport options ==
+#
+#
+#amqp_url = "amqp://guest:guest@localhost:/"
+#amqp_timeout = 30
+#amqp_tag = "default"
+#amqp_consumers = 2
+#amqp_producers = 2
+
+# == LISTENERS ==
 #
 # A listener is defined by stating [listener.{name}] section.
 # {name} can be any of [a-zA-Z0-9_]. Codec can be one of
 # influx, graphite (json is in the works ;)). If you want
 # to disable the listener simply leave out the configuration.
 # Protocol can be only "tcp" at this moment
-
+# - [port]: port to listen on
+[listener]
 [listener.influx]
 port = 8001
 protocol = "tcp"
 codec = "influx"
-
 [listener.graphite]
 port = 8002
 protocol = "tcp"
 codec = "graphite"
 mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 
-# WRITER CONFIG
+# == WRITER ==
 #
+# Writer is ElasticSearch bulk indexing processor. Options:
+# - [urls]:        Array of ES endpoint URLs. You need to specify only one,
+#                  cluster is discovered automatically
+# - [timeout]:     ES request timeout in seconds.
+# - [concurrency]: How many concurrent processors to spawn.
+# - [bulk_max]:    Maximum count of metrics in one bulk index request.
+# - [bulk_wait]:   Maximum time before each bulk request is sent, regardless [bulk_max].
+# - [index]:       Prefix for index name. Results in [index]-YYYY.MM.DD template.
+# - [doc_type]:    Document type for raw data intake
+
 [writer]
-#
-# Writer processes the metrics for indexing
-#
-urls = [ "http://172.18.0.1:9200/" ]
+urls = [ "http://localhost:9200/" ]
 timeout = 10
-concurrency = 5
+concurrency = 1
 bulk_max = 5000
-bulk_wait = 10
+bulk_wait = 5
 index = "metrics"
 doc_type = "raw"
-ttl = 1
