--- a/etc/main.conf
+++ b/etc/main.conf
@@ -20,7 +20,7 @@ debug = false
 # - channel: in-memory go channel; only for single-host deployment
 # - redis: for single- and multi-host deployment
 # - amqp: with RabbitMQ cluster for multi-host HA deployment
-type = "channel"
+type = "amqp"
 
 # [buffer_size] specifies transport channel capacity of metrics
 buffer_size = 50000
@@ -47,12 +47,21 @@ buffer_size = 50000
 
 # == AMQP Transport options ==
 #
+# [amqp_url] specifies connection URI for RabbitMQ
+amqp_url = "amqp://guest:guest@localhost:5672/"
 #
-#amqp_url = "amqp://guest:guest@localhost:/"
-#amqp_timeout = 30
-#amqp_tag = "default"
-#amqp_consumers = 2
-#amqp_producers = 2
+# [amqp_timeout] sets TCP connection timeout for AMQP
+amqp_timeout = 30
+#
+# [amqp_tag] serves as data flow identifier
+amqp_tag = "default"
+#
+# Number of [amqp_consumers]
+amqp_consumers = 2
+#
+# Number of [amqp_producers]
+amqp_producers = 2
+#
 
 # == LISTENERS ==
 #
