--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
     image: redis
     ports:
       - "6379:6379"
+  rabbitmq:
+    image: rabbitmq
+    ports:
+      - "5672:5672"
   engine:
     build: .
     ports:
