--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,7 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = false
+debug = true
 
 # == TRANSPORT ==
 #
@@ -48,19 +48,19 @@ buffer_size = 50000
 # == AMQP Transport options ==
 #
 # [amqp_url] specifies connection URI for RabbitMQ
-amqp_url = "amqp://guest:guest@localhost:5672/"
+amqp_url = "amqp://guest:guest@127.0.0.1:5672/"
 #
 # [amqp_timeout] sets TCP connection timeout for AMQP
-amqp_timeout = 30
+amqp_timeout = 5
 #
 # [amqp_tag] serves as data flow identifier
 amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-amqp_consumers = 2
+amqp_consumers = 10
 #
 # Number of [amqp_producers]
-amqp_producers = 2
+amqp_producers = 10
 #
 
 # == LISTENERS ==
@@ -95,7 +95,7 @@ mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 # - [doc_type]:    Document type for raw data intake
 
 [writer]
-urls = [ "http://localhost:9200/" ]
+urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
 concurrency = 1
 bulk_max = 5000
