--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,7 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = true
+debug = false
 
 # == TRANSPORT ==
 #
@@ -20,7 +20,7 @@ debug = true
 # - channel: in-memory go channel; only for single-host deployment
 # - redis: for single- and multi-host deployment
 # - amqp: with RabbitMQ cluster for multi-host HA deployment
-type = "amqp"
+type = "channel"
 
 # [buffer_size] specifies transport channel capacity of metrics
 buffer_size = 50000
@@ -48,19 +48,19 @@ buffer_size = 50000
 # == AMQP Transport options ==
 #
 # [amqp_url] specifies connection URI for RabbitMQ
-amqp_url = "amqp://guest:guest@127.0.0.1:5672/"
+#amqp_url = "amqp://guest:guest@127.0.0.1:5672/"
 #
 # [amqp_timeout] sets TCP connection timeout for AMQP
-amqp_timeout = 5
+#amqp_timeout = 5
 #
 # [amqp_tag] serves as data flow identifier
-amqp_tag = "default"
+#amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-amqp_consumers = 10
+#amqp_consumers = 5
 #
 # Number of [amqp_producers]
-amqp_producers = 10
+#amqp_producers = 5
 #
 
 # == LISTENERS ==
@@ -99,6 +99,6 @@ urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
 concurrency = 1
 bulk_max = 5000
-bulk_wait = 5
+bulk_wait = 1
 index = "metrics"
 doc_type = "raw"
