work on #17 and #21

--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,7 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = false
+debug = true
 
 # == TRANSPORT ==
 #
@@ -48,19 +48,19 @@ buffer_size = 50000
 # == AMQP Transport options ==
 #
 # [amqp_url] specifies connection URI for RabbitMQ
-#amqp_url = "amqp://guest:guest@127.0.0.1:5672/"
+amqp_url = "amqp://guest:guest@127.0.0.1:5672/"
 #
 # [amqp_timeout] sets TCP connection timeout for AMQP
-#amqp_timeout = 5
+amqp_timeout = 5
 #
 # [amqp_tag] serves as data flow identifier
-#amqp_tag = "default"
+amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-#amqp_consumers = 5
+amqp_consumers = 5
 #
 # Number of [amqp_producers]
-#amqp_producers = 5
+amqp_producers = 5
 #
 
 # == LISTENERS ==
@@ -72,10 +72,10 @@ buffer_size = 50000
 # Protocol can be only "tcp" at this moment
 # - [port]: port to listen on
 [listener]
-[listener.influx]
-port = 8001
-protocol = "tcp"
-codec = "influx"
+# [listener.influx]
+# port = 8001
+# protocol = "tcp"
+# codec = "influx"
 [listener.graphite]
 port = 8002
 protocol = "tcp"
