close #17 and some logger fixes

--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,7 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = true
+debug = false
 
 # == TRANSPORT ==
 #
@@ -20,10 +20,10 @@ debug = true
 # - channel: in-memory go channel; only for single-host deployment
 # - redis: for single- and multi-host deployment
 # - amqp: with RabbitMQ cluster for multi-host HA deployment
-type = "channel"
+type = "amqp"
 
 # [buffer_size] specifies transport channel capacity of metrics
-buffer_size = 50000
+buffer_size = 500000
 
 # == Redis Transport options ==
 #
@@ -57,10 +57,10 @@ amqp_timeout = 5
 amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-amqp_consumers = 5
+amqp_consumers = 1
 #
 # Number of [amqp_producers]
-amqp_producers = 5
+amqp_producers = 1
 #
 
 # == LISTENERS ==
@@ -97,8 +97,8 @@ mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 [writer]
 urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
-concurrency = 1
+concurrency = 2
 bulk_max = 5000
-bulk_wait = 1
+bulk_wait = 10
 index = "metrics"
 doc_type = "raw"
