close #19 and new [redis_retries] config option

--- a/etc/main.conf
+++ b/etc/main.conf
@@ -38,6 +38,8 @@ buffer_size = 500000
 # [redis_wait] specifies how long should we wait for Metric retrieval from Redis
 #redis_wait = 1
 #
+# [redis_retries] specifies how many times to retry the failed operation before giving an error
+#redis_retries = 3
 # Redis connection pool capacity is specified by [redis_connections]
 #redis_connections = 100
 #
