--- a/etc/main.conf
+++ b/etc/main.conf
@@ -59,11 +59,8 @@ amqp_timeout = 5
 amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-amqp_consumers = 1
-#
-# Number of [amqp_producers]
-amqp_producers = 1
-#
+amqp_workers = 1
+
 
 # == LISTENERS ==
 #
