work on #21 implementation and some perf/reliability enhancements

--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,7 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = false
+debug = true
 
 # == TRANSPORT ==
 #
@@ -20,7 +20,7 @@ debug = false
 # - channel: in-memory go channel; only for single-host deployment
 # - redis: for single- and multi-host deployment
 # - amqp: with RabbitMQ cluster for multi-host HA deployment
-type = "amqp"
+type = "channel"
 
 # [buffer_size] specifies transport channel capacity of metrics
 buffer_size = 500000
@@ -59,7 +59,7 @@ amqp_timeout = 5
 amqp_tag = "default"
 #
 # Number of [amqp_consumers]
-amqp_workers = 1
+amqp_workers = 2
 
 
 # == LISTENERS ==
