work on #21 & exit procedure tuning

--- a/etc/main.conf
+++ b/etc/main.conf
@@ -10,7 +10,9 @@ syslog = false
 # can be also controlled from system by signals:
 # - SIGUSR1: enable debug
 # - SIGUSR2: disable debug
-debug = true
+debug = false
+
+report_every = "5s"
 
 # == TRANSPORT ==
 #
@@ -79,6 +81,7 @@ amqp_workers = 2
 port = 8002
 protocol = "tcp"
 codec = "graphite"
+decoders = 1
 mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 
 # == WRITER ==
@@ -96,8 +99,8 @@ mutator_file = "/etc/metrics-capacitor/graphite_mutator.conf"
 [writer]
 urls = [ "http://127.0.0.1:9200/" ]
 timeout = 10
-concurrency = 2
+concurrency = 1
 bulk_max = 5000
-bulk_wait = 10
+bulk_wait = "5s"
 index = "metrics"
 doc_type = "raw"
