--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,15 @@
 FROM blufor/lightimage
-RUN apk --no-cache add go go-tools gcc musl-dev graphviz && mkdir -p /go
-RUN mkdir -p /tmp /var/tmp
+RUN apk --no-cache add \
+  go \
+  go-tools \
+  gcc \
+  musl-dev \
+  graphviz \
+  && mkdir -p /go /tmp /var/tmp /go/src/github.com/blufor/metcap
 ENV GOPATH "/go/:/usr/lib/go"
 ENV GOBIN "/usr/local/bin"
 ENV PWD "/go"
-RUN mkdir -p /go/src/github.com/blufor/metcap
-RUN cd /go && go get -v \
+RUN cd /go && go get \
   github.com/BurntSushi/toml \
   github.com/RackSec/srslog \
   github.com/streadway/amqp \
@@ -13,5 +17,5 @@ RUN cd /go && go get -v \
   gopkg.in/olivere/elastic.v3 \
   gopkg.in/redis.v4 \
   gopkg.in/vmihailenco/msgpack.v2
-VOLUME /go/src/github.com/blufor/metcap /usr/local/bin /go/pkg
+VOLUME /go/src/github.com/blufor/metcap /usr/local/bin /go/pkg /tmp
 CMD [ "/bin/bash", "-li" ]
