--- a/etc/main.conf
+++ b/etc/main.conf
@@ -4,7 +4,7 @@
 #
 
 # Enable logging to Syslog
-syslog = false
+syslog = true
 
 # [debug] enables debug logging
 # can be also controlled from system by signals:
